Corrections in the gap input sec-4

--- a/style.css
+++ b/style.css
@@ -151,9 +151,9 @@ main{
 .sec-4{
     display: flex;
     justify-content: center;
-    gap: 3px;
+    gap: 30px;
     width: 100%;
-    padding: 6%;
+    padding: 40px 0;
     height: 100%;
     flex-wrap: wrap;
 }
@@ -181,7 +181,7 @@ main{
     width: 30%;
     gap: 25px;
     min-width: 350px;
-    padding: 0px 2% 30px 2%;
+    padding: 0px 0 30px 0;
 }
 .sec-4 img {
     width: 100%;
